# scion-apps-builder

./: .gitignore  .gitlab-ci.yml  BUILD.bazel  README.md  RELEASE  WORKSPACE
debian/: apt.sources.list
debian/scripts/: scion-webapp.postinst  scion-webapp.postrm
patches/: 001_vendor_update.patch
systemd/: scion-bwtestserver.service  scion-webapp.service
